--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "title = \"art vandelay\" # 'Art "
+    "title = \"art vandelay\" # 'Art Vandelay'"
    ]
   },
   {
