Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,11 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function str.upper>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "title = \"art vandelay\" # 'Art Vandelay'\n"
+    "title = \"art vandelay\" # 'Art Vandelay'\n",
+    "title.upper\n"
    ]
   },
   {
