Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.upper>"
+       "'ART VANDELAY'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "title = \"art vandelay\" # 'Art Vandelay'\n"
+    "title = \"art vandelay\" # 'Art Vandelay'\n",
+    "title.upper()\n"
    ]
   },
   {
