Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,8 +164,7 @@
     }
    ],
    "source": [
-    "title = \"art vandelay\" # 'Art Vandelay'\n",
-    "tit.upper()\n"
+    "title = \"art vandelay\" # 'Art Vandelay'.upper()\n"
    ]
   },
   {
