--- a/index.ipynb
+++ b/index.ipynb
@@ -205,8 +205,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "str 'ends with .com'"
+    "\"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
